--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,6 @@
     <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-auth-compat.js"></script>
     <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-database-compat.js"></script>
     <script src="firebase/config.js"></script>
-    <script src="js/app.js"></script>
     <script src="js/auth.js"></script>
     <script src="js/game.js"></script>
     <script src="js/leaderboard.js"></script>
@@ -58,5 +57,21 @@
         <button id="nav-settings" class="button">Settings</button>
         <button id="nav-logout" class="button" style="background:#dc3545;">Logout</button>
     </nav>
+    <script>
+        // Navigation bar handlers
+        document.getElementById('nav-game').onclick = () => {
+            // Could close popups or focus map if needed
+        };
+        document.getElementById('nav-leaderboard').onclick = () => {
+            alert("Leaderboard coming soon!");
+        };
+        document.getElementById('nav-settings').onclick = () => {
+            alert("Settings coming soon!");
+        };
+        document.getElementById('nav-logout').onclick = () => {
+            localStorage.removeItem('wt_user');
+            location.reload();
+        };
+    </script>
 </body>
 </html>
